2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: More strtol() replaced by getlong().
	* src/chage.c: expdays renamed to expdate. It is a date, even if
	expressed in a number of days since Jan 1, 1970.
	* src/chage.c: Likewise: lastday renamed to lstchgdate. Also fix
	the --lastday documentation.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: pwd_to_spwd() should be declared if USE_PAM is
	NOT defined.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Replace getnumber() by getlong(). This permits to
	get rid of another strtol().

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/getlong.c: Include both <stdlib.h> and <errno.h> needed
	for strtol and errno, and do not include "defines.h" (not needed).

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c, src/usermod.c, libmisc/getgr_nam_gid.c,
	libmisc/Makefile.am, lib/prototypes.h: Moved getgr_nam_gid() from
	src/useradd.c and src/usermod.c to libmisc/getgr_nam_gid.c.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Re-indent.
	* src/useradd.c: Use getlong instead of get_number.
	* src/useradd.c: Get rid of strtol.
	* src/useradd.c: Provide better warning in case a default GROUP or
	INACTIVE value is not valid in /etc/default/useradd.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Re-indent.
	* src/usermod.c: Specifying a inactivity value < -1 is not valid.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Prepare the next 4.1.3 release.
	* po/*.po, man/po/*.po: Updated PO files.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/addgrps.c: restrict add_groups() to
	ifndef USE_PAM.
	* lib/prototypes.h: Remove the declaration of add_cons_grps(). The
	function does not exist.